# qonduit

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  install.sh  qonduit.example.toml
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: constants.rs  epoch_intervals.rs  error.rs  event.rs  hash.rs  header.rs  identity.rs  lib.rs  message_type.rs  pipeline.rs  system.rs
crates/core/src/structs/: asset.rs  computors.rs  contract.rs  entity.rs  logging.rs  mining.rs  mod.rs  oracle.rs  quorum.rs  spectrum.rs  system_info.rs  tick.rs  transaction.rs
crates/core/tests/: integration.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: backfill.rs  client.rs  decoder.rs  decoders.rs  epoch_fetch.rs  lib.rs  metrics.rs  nats_publish.rs  nats_setup.rs  peer_manager.rs  pending.rs  protocol.rs
crates/ingestion/tests/: decoder_tests.rs
crates/processor/: Cargo.toml
crates/processor/src/: consumer.rs  indexer.rs  lib.rs
crates/qonduit/: Cargo.toml
crates/qonduit/src/: main.rs
crates/query/: Cargo.toml
crates/query/src/: docs.rs  docs_page.html  lib.rs  metrics.rs  rest.rs  rpc.rs  ws.rs
crates/storage/: Cargo.toml
crates/storage/src/: cold.rs  hot.rs  lib.rs  warm.rs
crates/storage/tests/: storage_tests.rs
