[workspace]
resolver = "2"
members = [
    "crates/qonduit",
    "crates/core",
    "crates/ingestion",
    "crates/processor",
    "crates/storage",
    "crates/query",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alez04/qonduit"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# NATS
async-nats = "0.38"

# Storage
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "zstd", "lz4"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Crypto / protocol
zerocopy = { version = "0.7", features = ["derive"] }
sha2 = "0.10"
kangarootwelve = "0.1"

# Metrics
prometheus = "0.13"

# Arrow / Parquet
arrow = "53"
parquet = { version = "53", features = ["zstd"] }

# Misc
futures-util = "0.3"
chrono = "0.4"
bytes = "1"
hex = "0.4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
