[package]
name = "qonduit-ingestion"
version.workspace = true
edition.workspace = true
description = "TCP ingestion worker: connects to Qubic nodes and publishes events to NATS"

[dependencies]
qonduit-core = { path = "../core" }
tokio = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
zerocopy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
