[package]
name = "qonduit-query"
version.workspace = true
edition.workspace = true
description = "Query server: HTTP/REST, JSON-RPC 2.0, and WebSocket endpoints"

[dependencies]
qonduit-core = { path = "../core" }
qonduit-storage = { path = "../storage" }
tokio = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
prometheus = { workspace = true }
hex = { workspace = true }
